[gd_scene load_steps=3 format=3 uid="uid://d2siun1rkipur"]

[ext_resource type="Script" path="res://world.gd" id="1_xuk0x"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_ele36"]

[node name="World" type="Node"]
script = ExtResource("1_xuk0x")

[node name="WorldUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Box" type="HBoxContainer" parent="WorldUI"]
layout_mode = 0
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
alignment = 2

[node name="Server" type="Button" parent="WorldUI/Box"]
layout_mode = 2
text = "Server"

[node name="Client" type="Button" parent="WorldUI/Box"]
layout_mode = 2
text = "Client"

[node name="Players" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PlayerSpawner" type="MultiplayerSpawner" parent="Players"]
unique_name_in_owner = true
_spawnable_scenes = PackedStringArray("res://player.tscn")
spawn_path = NodePath("..")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(0, 489)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
shape = SubResource("WorldBoundaryShape2D_ele36")

[connection signal="pressed" from="WorldUI/Box/Server" to="." method="start_server"]
[connection signal="pressed" from="WorldUI/Box/Client" to="." method="start_client"]
